// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StepSequenceItem Classic theme renders correctly 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  text-align: right;
  list-style-type: none;
  color: #b3c2c8;
  height: 24px;
  color: rgba(0,0,0,0.55);
}

.c0::before {
  content: '';
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: block;
  height: 1px;
  margin: 0 16px;
  background-color: #b3c2c8;
}

.c0 .carbon-icon {
  position: relative;
  top: -2px;
  margin-right: 8px;
  color: #00A376;
}

.c0:first-child {
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
}

.c0:first-child::before {
  display: none;
}

.c0::before {
  background-color: rgba(0,0,0,0.55);
}

.c2 {
  display: block;
  min-width: 16px;
  height: 16px;
  margin-right: 8px;
  text-align: center;
}

<li
  className="c0"
  data-component="step-sequence-item"
>
  <span
    className="c1"
  >
    <span
      className="c2"
    >
      2
    </span>
     
    Item
  </span>
</li>
`;

exports[`StepSequenceItem renders correctly 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  text-align: right;
  list-style-type: none;
  color: rgba(0,0,0,0.55);
}

.c0::before {
  content: '';
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: block;
  height: 1px;
  margin: 0 16px;
  background-color: rgba(0,0,0,0.55);
}

.c0 .carbon-icon {
  position: relative;
  top: -2px;
  margin-right: 8px;
  color: #00A376;
}

.c0:first-child {
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
}

.c0:first-child::before {
  display: none;
}

.c2 {
  display: block;
  min-width: 16px;
  height: 16px;
  margin-right: 8px;
  text-align: center;
}

<li
  className="c0"
  data-component="step-sequence-item"
>
  <span
    className="c1"
  >
    <span
      className="c2"
    >
      2
    </span>
     
    Item
  </span>
</li>
`;
